# discord-bot-in-rust

./: Cargo.toml  LICENSE  README.md
src/: .config.rs  README.md  main.rs
